# pythonExamples

./: .gitignore  ReadMe.md  __init__.py  pyashuprj.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
BasicCertification/: test.py
BasicCertification/Assignment2/: a2.py  ~$S-X12 Math.docx
Practice/: ItrGen.py  TestDegPattern.py  comprehension.py
Practice/Ploting/: pyplotexamples.py
Practice/RegularExp/: RegHelper.py
Practice/RestProject/: Application.py  appconfig.properties  dbconnection.py  sqlutility.py
Practice/finance/: Lesson1.py  Lesson2.py  Lesson3.py  Lesson4.py  Lesson5.py  Me.py  ReadYFinance.py  TechAnalysis.py  fin.properties  temp2.py  test.py  xlsxReportWriter.py
Practice/finance/data/: AAPL.csv  AAPLTechnicalAnalisis.xlsx
Practice/finance/risk/: Lesson1.py
Student/X11/Assignment/: DPSA1Q1.py  DPSA1Q2.py  DPSA1Q3.py  DPSA2Q1.py  DPSA2Q5.py  DPSA2Q9C.py  DPSP3.py
Student/X12/Feb2021/: fourletterword.py
Student/X12/GBD/: DplInList.py  UniqueInList.py  addmultiple.py
Student/X12/HD/: insertionsort.py  insertionsort2.py
Student/X12/HWFirst/: AssP10.py  AssP2.py  AssP3.py  AssP4.py  AssP5.py  AssP6.py  AssP7.py  AssP8.py  (+4 more)
projects/busticketbookingsystem/: addnewbusdt.py  booknewticket.py  busbookingproject.py  cancelticket.py  createdb.py  dbconnection.py  searchbusbyname.py  searchpassengerbyname.py  showallbooking.py  showallbuses.py  showallcancelbooking.py
projects/up/: ItrGen.py  comprehension.py
src/: __init__.py  letsample.py
src/DBSample/: DBSample.py  DbFetchTest.py
src/Practice/: ItrGen.py  __init__.py
(+124 files in other folders)
