[metadata]
name = example-pkg-YOUR-USERNAME-HERE
version = 0.0.1
author = Ashok Kumar Jha
author_email = ash.kr.jha@gmail.com
description = Starting Python Project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ashokjha/pythonExamples
project_urls =
    Bug Tracker = https://github.com/ashokjha/pythonExamples/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src